syntax = "proto3";
package db;

message GetRequest {
    int64 SessionId = 1;
    // Empty to get key at location
    string Key = 2;
    int64 Loc = 3;
    int64 VirtualLoc = 4;
}
message GetResponse {
    string Value = 1;
}

message SetRequest {
    int64 SessionId = 1;
    string Key = 2;
    string Value = 3;
    // Its virtual location (must >= 0 if used, < 0 means not used)
    int64 VirtualLoc = 4;
    // Dependent location
    int64 Dep = 5;
    // Dependent virtual location (must >= 0 if used, < 0 means not used)
    int64 VirtualDep = 6;
}
message SetResponse {
    // Location of the changes
    int64 Loc = 1;
}

message Node {
    // Parent location
    int64 Dep = 1;
    repeated int64 Children = 2;
    string Key = 3;
    int64 KeyHash = 4;
    string Value = 5;
    bytes Digest = 6;
    bytes DataDigest = 7;
}

message AddNodesRequest {
    repeated Node Nodes = 1;
}

message AddNodesResponse {
}

message UploadRequest {
    // Nodes to append to the location
    repeated Node Nodes = 1;
}
message UploadResponse {
}

message DownloadRequest {
    // Download from locations
    repeated int64 Locations = 1;
}
message DownloadResponse {
    // Nodes from the location
    repeated Node Nodes = 1;
}

message GetMerkleTreeRequest {
    // Tree from location
    int64 Location = 1;
}
message GetMerkleTreeResponse {
    // Nodes (containing only children, digest and dep)
    repeated Node Nodes = 1;
}

service DbService {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc AddNodes(AddNodesRequest) returns (AddNodesResponse) {}
    rpc Upload(UploadRequest) returns (UploadResponse) {}
    rpc Download(DownloadRequest) returns (DownloadResponse) {}
    rpc GetMerkleTree(GetMerkleTreeRequest) returns (GetMerkleTreeResponse) {}
}
